clients/include/rocblas.hpp

template <>
static constexpr auto rocblas_scal<double> = rocblas_dscal;
template <>
static constexpr auto rocblas_scal<rocblas_float_complex> = rocblas_cscal;
template <>
static constexpr auto rocblas_scal<rocblas_double_complex> = rocblas_zscal;
template <>
static constexpr auto rocblas_scal<rocblas_float_complex, float> = rocblas_csscal;
template <>
static constexpr auto rocblas_scal<rocblas_double_complex, double> = rocblas_zdscal;
template <>
static constexpr auto rocblas_scal_batched<float> = rocblas_sscal_batched;
template <>
static constexpr auto rocblas_scal_batched<double> = rocblas_dscal_batched;
template <>
static constexpr auto rocblas_scal_batched<rocblas_float_complex> = rocblas_cscal_batched;
template <>
static constexpr auto rocblas_scal_batched<rocblas_double_complex> = rocblas_zscal_batched;
template <>
static constexpr auto rocblas_scal_batched<rocblas_float_complex, float> = rocblas_csscal_batched;
template <>
static constexpr auto rocblas_scal_batched<rocblas_double_complex, double> = rocblas_zdscal_batched;
template <>
static constexpr auto rocblas_scal_strided_batched<float> = rocblas_sscal_strided_batched;
template <>
static constexpr auto rocblas_scal_strided_batched<double> = rocblas_dscal_strided_batched;
template <>
static constexpr auto
    rocblas_scal_strided_batched<rocblas_float_complex> = rocblas_cscal_strided_batched;
template <>
static constexpr auto
    rocblas_scal_strided_batched<rocblas_double_complex> = rocblas_zscal_strided_batched;
template <>
static constexpr auto
    rocblas_scal_strided_batched<rocblas_float_complex, float> = rocblas_csscal_strided_batched;
template <>
static constexpr auto
    rocblas_scal_strided_batched<rocblas_double_complex, double> = rocblas_zdscal_strided_batched;
template <>
static constexpr auto rocblas_copy<float> = rocblas_scopy;
template <>
static constexpr auto rocblas_copy<double> = rocblas_dcopy;
template <>
static constexpr auto rocblas_copy<rocblas_float_complex> = rocblas_ccopy;
template <>
static constexpr auto rocblas_copy<rocblas_double_complex> = rocblas_zcopy;